# FRA532_LAB2

./: .gitignore  readme.md
MATLAB/: QuadCopter.m  Three_D_Trajectory.m  Two_D_Trajectory.m
src/quad_controller/: CMakeLists.txt  package.xml
src/quad_controller/include/quad_controller/: PID.hpp
src/quad_controller/src/: PID.cpp  lqr_controller.cpp  pid_controller.cpp  pid_controller_v2.cpp
src/quad_description/launch/: sim.launch.py
src/quad_description/rviz/: sim.rviz
src/quad_description/urdf/: gazebo_full.xacro  quadrotor_base.xacro
src/quad_trajectory/: package.xml  setup.cfg  setup.py
src/quad_trajectory/config/: dual_axis_trajectories.csv  tri_axis_trajectories_3D.csv
src/quad_trajectory/quad_trajectory/: 2d_trajectory.py  3d_trajectory.py  step_response_evaluator.py
